tests/snapshots/tests__run@arithmetic.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: examples/arithmetic.hvmc
---
({3 </ a b> <% c d>} ({5 a c} [b d]))
RWTS   :               7
- ANNI :               4
- COMM :               0
- ERAS :               0
- DREF :               3
- OPER :               0
