tests/snapshots/tests__run@bool_and.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/bool_and.hvmc
---
(* (a a))
RWTS   :              14
- ANNI :               4
- COMM :               0
- ERAS :               1
- DREF :               9
- OPER :               0
