tests/snapshots/tests__run@chained_ops.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/chained_ops.hvmc
---
#7184190578800
RWTS   :              47
- ANNI :               2
- COMM :               4
- ERAS :               0
- DREF :               1
- OPER :              40
