tests/snapshots/tests__run@commutation.hvm.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/commutation.hvm
---
(a a)
RWTS   :               7
- ANNI :               1
- COMM :               2
- ERAS :               1
- DREF :               3
- OPER :               0
