tests/snapshots/tests__run@dec_bits.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/dec_bits.hvmc
---
(* (* (a a)))
RWTS   :         180_036
- ANNI :          98_190
- COMM :              11
- ERAS :          32_738
- DREF :          49_097
- OPER :               0
