tests/snapshots/tests__run@era_era.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/era_era.hvmc
---
*
RWTS   :               3
- ANNI :               0
- COMM :               0
- ERAS :               1
- DREF :               2
- OPER :               0
